--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "inquirer": "^9.1.4",
     "typescript": "^4.9.4",
     "vite": "^4.1.4",
-    "vue-eslint-parser": "^9.1.0"
+    "vue-eslint-parser": "^9.1.0",
+    "vue-tsc": "^1.2.0"
   },
   "peerDependencies": {
     "vue": "^3.2.0"
