--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "recycle-list",
+  "name": "@sft/recycle-list",
   "version": "1.0.0",
   "description": "",
   "main": "lib/index.js",
