--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "lib/index.js",
   "scripts": {
+    "prepare": "husky install",
     "start": "npm run dev",
-    "dev": "cd dev && npm run dev"
+    "dev": "cd dev && npm run dev",
+    "lint": "eslint . --ext .vue,.js,.ts,.jsx,.tsx --fix",
+    "lint:style": "stylelint \"./**/*.{css,less,scss,vue,html}\" --fix"
   },
   "repository": {
     "type": "git",
@@ -18,6 +21,8 @@
   },
   "homepage": "https://github.com/JDEast1029/recycle-list#readme",
   "devDependencies": {
+    "@commitlint/cli": "^17.5.1",
+    "@commitlint/config-conventional": "^17.4.4",
     "@rollup/plugin-alias": "^4.0.2",
     "@rollup/plugin-commonjs": "^24.0.0",
     "@rollup/plugin-dynamic-import-vars": "^2.0.1",
@@ -37,7 +42,17 @@
     "eslint-plugin-markdown": "^2.0.0",
     "eslint-plugin-vue": "^9.4.0",
     "eslint-watch": "^8.0.0",
+    "husky": "^8.0.3",
     "inquirer": "^9.1.4",
+    "postcss": "^8.4.21",
+    "postcss-html": "^1.5.0",
+    "postcss-less": "^6.0.0",
+    "stylelint": "^15.4.0",
+    "stylelint-config-recommended-less": "^1.0.4",
+    "stylelint-config-standard": "^32.0.0",
+    "stylelint-config-standard-vue": "^1.0.0",
+    "stylelint-less": "^1.0.6",
+    "stylelint-order": "^6.0.3",
     "typescript": "^4.9.4",
     "vite": "^4.1.4",
     "vue-eslint-parser": "^9.1.0",
