--- a/package.json
+++ b/package.json
@@ -30,11 +30,15 @@
     "@rollup/plugin-node-resolve": "15.0.1",
     "@rollup/plugin-typescript": "^10.0.1",
     "@rollup/pluginutils": "^5.0.2",
+    "@types/lodash.debounce": "^4.0.7",
+    "@types/lodash.pick": "^4.4.7",
     "@types/node": "^18.11.17",
+    "@types/vue": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^5.46.0",
     "@typescript-eslint/parser": "^5.46.0",
     "@vitejs/plugin-vue": "^3.1.0",
     "@vitejs/plugin-vue-jsx": "^2.0.1",
+    "@vue/tsconfig": "^0.1.3",
     "eslint": "^8.30.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-babel": "^5.3.1",
@@ -63,6 +67,7 @@
   },
   "dependencies": {
     "lodash.debounce": "^4.0.8",
+    "lodash.pick": "^4.4.0",
     "lodash.throttle": "^4.1.1",
     "resize-observer-polyfill": "^1.5.1"
   }
