--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "prepare": "husky install",
     "start": "npm run dev",
     "dev": "cd dev && npm run dev",
-    "lint": "eslint . --ext .vue,.js,.ts,.jsx,.tsx --fix",
-    "lint:style": "stylelint \"./**/*.{css,less,scss,vue,html}\" --fix"
+    "lint": "eslint --ext .vue,.js,.ts,.jsx,.tsx --fix --ignore-path .gitignore .",
+    "lint:style": "stylelint \"./**/*.{css,scss,vue,html}\" --fix "
   },
   "repository": {
     "type": "git",
@@ -50,12 +50,9 @@
     "inquirer": "^9.1.4",
     "postcss": "^8.4.21",
     "postcss-html": "^1.5.0",
-    "postcss-less": "^6.0.0",
     "stylelint": "^15.4.0",
-    "stylelint-config-recommended-less": "^1.0.4",
     "stylelint-config-standard": "^32.0.0",
     "stylelint-config-standard-vue": "^1.0.0",
-    "stylelint-less": "^1.0.6",
     "stylelint-order": "^6.0.3",
     "typescript": "^4.9.4",
     "vite": "^4.1.4",
@@ -70,5 +67,21 @@
     "lodash.pick": "^4.4.0",
     "lodash.throttle": "^4.1.1",
     "resize-observer-polyfill": "^1.5.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint-staged",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
+  "lint-staged": {
+    "*.{js,ts,vue}": [
+      "eslint --fix",
+      "git add"
+    ],
+    "*.{vue,css,scss}": [
+      "stylelint --fix",
+      "git add"
+    ]
   }
 }
