--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint-staged",
+      "pre-commit": "npm run lint & npm run lint:style",
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
