--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
   "husky": {
     "hooks": {
       "pre-commit": "npm run lint & npm run lint:style",
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+      "commit-msg": "commitlint -e $HUSKY_GIT_PARAMS"
     }
   },
   "lint-staged": {
