--- a/package.json
+++ b/package.json
@@ -2,11 +2,21 @@
   "name": "@sft/recycle-list",
   "version": "1.0.0",
   "description": "",
-  "main": "lib/index.js",
+  "type": "module",
+  "main": "./lib/index.js",
+  "types": "./lib/index.d.ts",
+  "files": ["lib"],
+  "exports": {
+    ".": {
+      "import": "./lib/index.js",
+      "require": "./lib/index.cjs"
+    }
+  },
   "scripts": {
     "prepare": "husky install",
     "start": "npm run dev",
     "dev": "cd dev && npm run dev",
+    "build": "rimraf lib && vite build",
     "lint": "eslint --ext .vue,.js,.ts,.jsx,.tsx --fix --ignore-path .gitignore .",
     "lint:style": "stylelint \"./**/*.{css,scss,vue,html}\" --fix "
   },
@@ -21,15 +31,9 @@
   },
   "homepage": "https://github.com/JDEast1029/recycle-list#readme",
   "devDependencies": {
+    "@babel/preset-env": "^7.20.2",
     "@commitlint/cli": "^17.5.1",
     "@commitlint/config-conventional": "^17.4.4",
-    "@rollup/plugin-alias": "^4.0.2",
-    "@rollup/plugin-commonjs": "^24.0.0",
-    "@rollup/plugin-dynamic-import-vars": "^2.0.1",
-    "@rollup/plugin-json": "^5.0.2",
-    "@rollup/plugin-node-resolve": "15.0.1",
-    "@rollup/plugin-typescript": "^10.0.1",
-    "@rollup/pluginutils": "^5.0.2",
     "@types/lodash.debounce": "^4.0.7",
     "@types/lodash.pick": "^4.4.7",
     "@types/node": "^18.11.17",
@@ -38,6 +42,7 @@
     "@typescript-eslint/parser": "^5.46.0",
     "@vitejs/plugin-vue": "^3.1.0",
     "@vitejs/plugin-vue-jsx": "^2.0.1",
+    "@vue/compiler-sfc": "^3.2.47",
     "@vue/tsconfig": "^0.1.3",
     "eslint": "^8.30.0",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -48,8 +53,10 @@
     "eslint-watch": "^8.0.0",
     "husky": "^8.0.3",
     "inquirer": "^9.1.4",
+    "less": "^4.1.3",
     "postcss": "^8.4.21",
     "postcss-html": "^1.5.0",
+    "rimraf": "^3.0.2",
     "stylelint": "^15.4.0",
     "stylelint-config-standard": "^32.0.0",
     "stylelint-config-standard-vue": "^1.0.0",
