--- a/package.json
+++ b/package.json
@@ -3,19 +3,22 @@
   "version": "1.0.0",
   "description": "",
   "type": "module",
-  "main": "./lib/index.js",
+  "main": "./lib/index.esm.js",
   "types": "./lib/index.d.ts",
-  "files": ["lib"],
+  "files": [
+    "lib"
+  ],
   "exports": {
     ".": {
-      "import": "./lib/index.js",
-      "require": "./lib/index.cjs"
+      "import": "./lib/index.esm.js",
+      "require": "./lib/index.cjs.js"
     }
   },
   "scripts": {
     "prepare": "husky install",
     "start": "npm run dev",
     "dev": "cd dev && npm run dev",
+    "type-check": "vue-tsc --noEmit",
     "build": "rimraf lib && vite build",
     "lint": "eslint --ext .vue,.js,.ts,.jsx,.tsx --fix --ignore-path .gitignore .",
     "lint:style": "stylelint \"./**/*.{css,scss,vue,html}\" --fix "
@@ -42,7 +45,6 @@
     "@typescript-eslint/parser": "^5.46.0",
     "@vitejs/plugin-vue": "^3.1.0",
     "@vitejs/plugin-vue-jsx": "^2.0.1",
-    "@vue/compiler-sfc": "^3.2.47",
     "@vue/tsconfig": "^0.1.3",
     "eslint": "^8.30.0",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -54,8 +56,8 @@
     "husky": "^8.0.3",
     "inquirer": "^9.1.4",
     "less": "^4.1.3",
-    "postcss": "^8.4.21",
     "postcss-html": "^1.5.0",
+    "postcss-less": "^6.0.0",
     "rimraf": "^3.0.2",
     "stylelint": "^15.4.0",
     "stylelint-config-standard": "^32.0.0",
